objects/EOS_Requirements__mdt.object
<CustomObject>
    <description>Updated 5.14.19</description>
    <fields>
        <fullName>Applicant_Type__c</fullName>
        <label>Applicant Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Applicant</fullName>
                    <default>true</default>
                    <label>Applicant</label>
                </value>
                <value>
                    <fullName>Co-Applicant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appraisal_Genesis__c</fullName>
        <description>Maps to Appraisal.Appraisal_Genesis__c</description>
        <label>Appraisal Genesis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Greenlight Requested</fullName>
                    <default>true</default>
                    <label>Greenlight Requested</label>
                </value>
                <value>
                    <fullName>IA Requested</fullName>
                </value>
                <value>
                    <fullName>Client Requested</fullName>
                </value>
                <value>
                    <fullName>Client Provided</fullName>
                </value>
                <value>
                    <fullName>Lender Provided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                    <default>true</default>
                    <label>Application</label>
                </value>
                <value>
                    <fullName>Application Package</fullName>
                </value>
                <value>
                    <fullName>Assets</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Debt Reduction</fullName>
                </value>
                <value>
                    <fullName>Final Approval</fullName>
                </value>
                <value>
                    <fullName>HB Application Package</fullName>
                </value>
                <value>
                    <fullName>Home Condition</fullName>
                </value>
                <value>
                    <fullName>Income</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Investment Due Diligence</fullName>
                </value>
                <value>
                    <fullName>Liabilities</fullName>
                </value>
                <value>
                    <fullName>Lien</fullName>
                </value>
                <value>
                    <fullName>MAD</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
                <value>
                    <fullName>Mortgage</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Post-Closing</fullName>
                </value>
                <value>
                    <fullName>Property Ownership</fullName>
                </value>
                <value>
                    <fullName>Rider</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Stage Tasks</fullName>
                </value>
                <value>
                    <fullName>Title</fullName>
                </value>
                <value>
                    <fullName>Unison Documents</fullName>
                </value>
                <value>
                    <fullName>Valuation</fullName>
                </value>
                <value>
                    <fullName>Values</fullName>
                </value>
                <value>
                    <fullName>Verification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chatter_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chatter Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chatter_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chatter Post</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Mention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Mention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dupallowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean indicating whether more than one of these Requirements should be created for a single deal.</description>
        <label>Duplicate Allowed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <description>If Custom Email is checked, then write here Email Template.
If Custom Email is unchecked, this value will be ignored.</description>
        <label>Email Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Filter__c</fullName>
        <description>This is a comma separated list of user roles that show who would be creating these Requirements</description>
        <label>Group Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IA_Mention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IA Mention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_vs_External__c</fullName>
        <label>Internal vs. External</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                    <default>true</default>
                    <label>Internal</label>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PCS_Mention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PCS Mention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PS_Mention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PS Mention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QC_Mention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QC Mention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RM_Mention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RM Mention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSI_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RSI Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Wording to pre-populate this field.</description>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequirementName__c</fullName>
        <label>Requirement Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1099</fullName>
                </value>
                <value>
                    <fullName>Add Applicant to Title at Closing</fullName>
                </value>
                <value>
                    <fullName>Additional Appraisal Requested</fullName>
                </value>
                <value>
                    <fullName>Additional Assets Verification Required</fullName>
                </value>
                <value>
                    <fullName>Additional Lien Information</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Application Required for All Parties on Title</fullName>
                </value>
                <value>
                    <fullName>Appraisal</fullName>
                </value>
                <value>
                    <fullName>Appraisal - 1004D</fullName>
                </value>
                <value>
                    <fullName>Appraisal - 1st</fullName>
                </value>
                <value>
                    <fullName>Appraisal - 2nd</fullName>
                </value>
                <value>
                    <fullName>Appraisal - 3rd</fullName>
                </value>
                <value>
                    <fullName>Appraisal Desk Review</fullName>
                </value>
                <value>
                    <fullName>Asset Statement</fullName>
                </value>
                <value>
                    <fullName>Authorization to Share</fullName>
                </value>
                <value>
                    <fullName>CAP Completed</fullName>
                </value>
                <value>
                    <fullName>Certified Documents</fullName>
                </value>
                <value>
                    <fullName>Cert of Occupancy</fullName>
                </value>
                <value>
                    <fullName>Change Vesting Type</fullName>
                </value>
                <value>
                    <fullName>Client Must Pay Down Mortgage - 1st Lender</fullName>
                </value>
                <value>
                    <fullName>Client Must Pay Down Mortgage - 2nd Lender</fullName>
                </value>
                <value>
                    <fullName>Client Must Pay Down Mortgage - 3rd Lender</fullName>
                </value>
                <value>
                    <fullName>Closing Agent Prelim / Title Report</fullName>
                </value>
                <value>
                    <fullName>Closing Documents</fullName>
                </value>
                <value>
                    <fullName>Condo Rider Executed</fullName>
                </value>
                <value>
                    <fullName>Credit Report</fullName>
                </value>
                <value>
                    <fullName>Credit Supplement</fullName>
                </value>
                <value>
                    <fullName>Custom MAD Cap</fullName>
                </value>
                <value>
                    <fullName>Death Certificate</fullName>
                </value>
                <value>
                    <fullName>Disability Award Letter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Success_Factor__c</fullName>
        <label>Success Factor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OAV</fullName>
                    <default>true</default>
                    <label>OAV</label>
                </value>
                <value>
                    <fullName>LTV</fullName>
                </value>
                <value>
                    <fullName>DTI</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Property Ownership</fullName>
                </value>
                <value>
                    <fullName>Net Cash to Partner</fullName>
                </value>
                <value>
                    <fullName>Program</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
                <value>
                    <fullName>Post-Closing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TS_Mention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TS Mention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data Request</fullName>
                    <default>true</default>
                    <label>Data Request</label>
                </value>
                <value>
                    <fullName>Stipulation</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>EOS Requirements</label>
    <listViews>
        <fullName>All_EOS_Requirements_View</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Applicant_Type__c</columns>
        <columns>Category__c</columns>
        <columns>Internal_vs_External__c</columns>
        <columns>RequirementName__c</columns>
        <columns>Reason__c</columns>
        <columns>RSI_Eligible__c</columns>
        <columns>Success_Factor__c</columns>
        <columns>Type__c</columns>
        <columns>Group_Filter__c</columns>
        <columns>Dupallowed__c</columns>
        <columns>Chatter_Post__c</columns>
        <columns>PS_Mention__c</columns>
        <columns>IA_Mention__c</columns>
        <filterScope>Everything</filterScope>
        <label>All EOS Requirements View</label>
    </listViews>
    <pluralLabel>EOS Requirements</pluralLabel>
</CustomObject>